--- a/appsettings.json
+++ b/appsettings.json
@@ -33,5 +33,10 @@
   "ConnectionStrings": {
     "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
+  },
+  "BusinessService": {
+    "ServiceUrl": "http://bzq.mekashron.co.il:33326/soap/IBusinessAPI",
+    "OlUserName": "server@mekashron.com",
+    "OlPassword": "123456"
   }
 }
